# imu-dds-adapter

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: session-notes.md
docs/diagrams/: architecture.md
docs/superpowers/plans/: 2026-05-23-imu-dds-adapter.md
docs/superpowers/specs/: 2026-05-23-imu-dds-adapter-design.md
ros2_ws/src/imu_dds_adapter/: CMakeLists.txt  package.xml
ros2_ws/src/imu_dds_adapter/config/: adapter_params.yaml  imu_rviz.rviz
ros2_ws/src/imu_dds_adapter/include/imu_dds_adapter/: imu_converter.hpp  imu_frame.hpp  imu_publisher_node.hpp  nmea_parser.hpp  serial_port.hpp
ros2_ws/src/imu_dds_adapter/launch/: imu_dds.launch.py
ros2_ws/src/imu_dds_adapter/meshes/: vn100_rugged.stl
ros2_ws/src/imu_dds_adapter/src/: imu_converter.cpp  imu_publisher_node.cpp  main.cpp  nmea_parser.cpp  serial_port.cpp
ros2_ws/src/imu_dds_adapter/test/: test_imu_converter.cpp  test_nmea_parser.cpp
ros2_ws/src/imu_dds_adapter/urdf/: vn100.urdf
ros2_ws/src/imu_dds_monitor/: CMakeLists.txt  package.xml  plugin.xml
ros2_ws/src/imu_dds_monitor/include/imu_dds_monitor/: imu_monitor_widget.hpp
ros2_ws/src/imu_dds_monitor/resource/: imu_monitor.ui
ros2_ws/src/imu_dds_monitor/src/: imu_monitor_plugin.cpp  imu_monitor_widget.cpp
tools/: CMakeLists.txt  imu_dds_spy.cpp
